--- a/usersearch/public/index.html
+++ b/usersearch/public/index.html
@@ -7,6 +7,7 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 
     <title>User Searcher</title>
   </head>
